# NLP-RMM

./: .gitignore  README.md  pyproject.toml  pyvenv.cfg  test.py
data/schema/: action_catalog.json  wfl.schema.json
data/test/: make_wfl_snippets.py  unite_data.py
infra/: iam-policy-sagemaker-exec.json  s3_roles_bootstrap.sh
infra/terraform/: backend.tf  eks.tf  hyperpod.tf  iam.tf  kms.tf  main.tf  outputs.tf  s3.tf  variables.tf
infra/terraform/lifecycle/: on_create.sh
src/: requirements.txt
src/synth/: compile_wfl.py  dedupe.py  entrypoint.py  generate_synth.py  paraphrase.py  prompts.py  requirements.txt  seeds.py
src/synth/configs/: synth.config.yaml
src/synth/providers/: bedrock_client.py  openai_client.py
src/synth/utils/: contracts.py  debug.py  errors.py  json_utils.py  semantic_validate.py
src/training/dpo/: dataset_dpo.py  train_dpo.py
src/training/sft/: dataset_sft.py  eval_wfl.py  prompt_templates.py  train_sft.py
tools/: bootstrap_tf_backend.sh  grab_tensor_metrics.sh  launch_dpo_training.py  launch_sft_training.py  package_code.sh  sync_data.sh  validate_wfl.py  vendor_hyperpod_cli.sh
training/sft/: train_sft.py
workloads/terraform/: backend.tf  iam_pods.tf  inference.tf  providers.tf  variables.tf
