[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlp-rmm"
version = "0.1.0"
requires-python = ">=3.10"
description = "Teacher→fine-tune pipeline for RMM"
readme = "README.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["synth*"]
